trunk/Archive2/a1/3c6f2a6533bb6d/output
main.cpp:56:15: error: call to function 'operator<<' that is neither visible in the template definition nor found by argument-dependent lookup
    std::cout << q << std::endl;
              ^
main.cpp:94:5: note: in instantiation of function template specialization 'moveNthFront<int>' requested here
    moveNthFront(data, n);
    ^
main.cpp:60:15: note: 'operator<<' should be declared prior to the call site
std::ostream& operator<<(std::ostream& os, queue<T> queueCopy) {
              ^
1 error generated.
